# Grupo05

./: .gitignore  README.md  package-lock.json  test.py
docs/: index.md
src/: README.md
src/algorithm/: .gitignore  battery.py  graph.py  initial.py  map_generator.py  moving_average.py  simulation.py
src/api/: requirements.txt
src/app/: database  package-lock.json  package.json
src/app/main/: background.ts
src/app/renderer/: tailwind.config.js  tsconfig.json
src/app/renderer/components/ViewWindow/: ViewWindow.css  ViewWindow.js
src/app/renderer/pages/: _app.jsx  home.jsx  inicio.jsx  login.jsx
src/app/renderer/pages/components/: InputMap.js  LineChart.js  Navbar.js  PostButton.js  VideoStream.js  ViewWindow.js  Websocket.js  videoPage.js
src/app/renderer/styles/: globals.css
src/app/server/: main.js
src/embed/: .gitignore  mq_135_detection.ino
src/embed/ROS_pkgs/: README.md
src/embed/ROS_pkgs/gerbros/: package.xml  setup.cfg  setup.py
src/embed/ROS_pkgs/gerbros/gerbros/: server.py  simulation.py  test.py
src/embed/ROS_pkgs/gerbros/launch/: launch.xml
src/embed/ROS_pkgs/interfaces/: CMakeLists.txt  package.xml
src/embed/interfaces/: CMakeLists.txt  package.xml
src/embed/interfaces/msg/: CmdMovement.msg
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  main.css
src/frontend/src/components/: Camera.js  Dados.js  Virtual.js
src/frontend/src/pages/: index.js
src/frontend/src/styles/: globals.css
src/img_detection/: pipeline.ipynb
(+8 files in other folders)
